docker build error \ mod dockerfile : add cmd RUN composer & COPY resources

--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get install -y curl
 
 ARG NODE_VERSION=18
 
+RUN php -r "readfile('https://getcomposer.org/installer');" | php -- --install-dir=/usr/bin/ --filename=composer 
 RUN curl -sS https://getcomposer.org/installer | php  
 RUN mv composer.phar /usr/bin/composer
 
@@ -29,6 +30,7 @@ RUN echo '' | pecl install -o -f redis \
     
 RUN docker-php-ext-install zip
 
+COPY composer.json /var/www/html/composer.json
 RUN composer global require laravel/installer
 RUN ["/bin/bash", "-c", "echo PATH=$PATH:~/.composer/vendor/bin/ >> ~/.bashrc"]
 RUN ["/bin/bash", "-c", "source ~/.bashrc"]
@@ -36,9 +38,18 @@ RUN ["/bin/bash", "-c", "source ~/.bashrc"]
 COPY package.json /var/www/html/package.json
 COPY vite.config.js /var/www/html/vite.config.js
 COPY resources /var/www/html/resources
+COPY app /var/www/html/app
+COPY bootstrap /var/www/html/bootstrap
+COPY config /var/www/html/config
+COPY database /var/www/html/database
+COPY artisan /var/www/html/artisan
+COPY routes /var/www/html/routes
+COPY storage /var/www/html/storage
 COPY public /var/www/html/public
 COPY Dockerfiles/start-container /usr/local/bin/start-container
 COPY Dockerfiles/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+RUN composer update
 
 RUN npm install
 RUN npm run build
