--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
             sail:
                 ipv4_address: 172.27.0.2
         volumes:
-            - ./docker/nginx.conf:/etc/nginx/nginx.conf
+            - ./Dockerfiles/nginx.conf:/etc/nginx/nginx.conf
+            - ./nginx.log:/var/log/nginx/error/error.log
         container_name: myweb-proxy
         depends_on:
             - laravel
@@ -24,7 +25,7 @@ services:
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-8888}:8080'
+            - '${APP_PORT:-8888}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
             WWWUSER: '${WWWUSER}'
@@ -32,8 +33,11 @@ services:
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
         volumes:
             - '.:/var/www/html/'
+            - './Dockerfiles/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf'
             - /var/www/html/vendor
             - /var/www/html/node_modules
+            - /var/www/html/public
+            - /var/www/html/storage
         networks:
             sail:
                 ipv4_address: 172.27.0.3
