--- a/Dockerfiles/nginx.conf
+++ b/Dockerfiles/nginx.conf
@@ -10,12 +10,26 @@ http {
     default_type  application/octet-stream;
 
     server {
+        listen 8080;
+        listen [::]:8080;
+
+        server_name localhost;
+    }
+
+    upstream laravel_app {
+        server 172.27.0.3:8080;
+    }
+
+    server {
         listen 80; # nginx를 통해 외부로 노출되는 port.
 
+        server_name $host_url; # 노출되는 도메인
+        # return 308 https://$host$request_uri;
         location / {
-            proxy_pass         http://121.141.140.103:8080/; # arbitrary한 upstream명
+            proxy_pass         http://laravel_app; # arbitrary한 upstream명
         }
     }
+
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
