--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
         networks:
             sail:
                 ipv4_address: 172.27.0.2
+        environment:
+            host_url: "${APP_URL}"
         volumes:
             - ./Dockerfiles/nginx.conf:/etc/nginx/nginx.conf
             - ./nginx.log:/var/log/nginx/error/error.log
@@ -18,17 +20,13 @@ services:
         build:
             context: .
             dockerfile: Dockerfiles/Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
         image: laravel_app:${TAG:-latest}
         container_name: laravel_app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-8888}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
-            WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
         volumes:
