--- a/Dockerfiles/nginx.conf
+++ b/Dockerfiles/nginx.conf
@@ -9,15 +9,17 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    upstream laravel_app {
+        server 172.27.0.3:8080;
+    }
+
     server {
         listen 8080;
         listen [::]:8080;
 
-        server_name localhost;
-    }
-
-    upstream laravel_app {
-        server 172.27.0.3:8080;
+        location / {
+            proxy_pass         http://localhost; # arbitrary한 upstream명
+        }
     }
 
     server {
@@ -28,8 +30,23 @@ http {
         location / {
             proxy_pass         http://laravel_app; # arbitrary한 upstream명
         }
+        location ~ /.well-known/acme-challenge/ {
+            allow all;
+            root /var/www/html;
+        }
     }
 
+    server {
+        listen 443 ssl; # nginx를 통해 외부로 노출되는 port.
+
+        server_name $host_url; # 노출되는 도메인
+        # return 308 https://$host$request_uri;
+        location / {
+            proxy_pass         http://laravel_app; # arbitrary한 upstream명
+        }
+        ssl_certificate /etc/letsencrypt/live/couhensoft.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/couhensoft.com/privkey.pem;
+    }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
