--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         volumes:
             - ./Dockerfiles/nginx.conf:/etc/nginx/nginx.conf
             - ./nginx.log:/var/log/nginx/error/error.log
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/data:/var/www/html
         container_name: myweb-proxy
         depends_on:
             - laravel
@@ -52,6 +54,19 @@ services:
         networks:
             sail:
                 ipv4_address: 172.27.0.6
+    certbot:
+        depends_on:
+            - nginx
+        container_name: certbot
+        image: certbot/certbot:latest
+        command: certonly --webroot --webroot-path=/var/www/certbot --email paosidu@naver.com --agree-tos  --renew-by-default --no-eff-email -d couhensoft.com
+        volumes:
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/data:/var/www/certbot
+            - ./certbot/logs:/var/log/letsencrypt
+        networks:
+            sail:
+                ipv4_address: 172.27.0.7
 networks:
     sail:
         ipam:
