--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,73 +8,12 @@ services:
         networks:
             sail:
                 ipv4_address: 172.27.0.2
+        environment:
+            host_url: "${APP_URL}"
         volumes:
-            - ./docker/nginx.conf:/etc/nginx/nginx.conf
+            - ./Dockerfiles/nginx.dev.conf:/etc/nginx/nginx.conf
+            - ./nginx.log:/var/log/nginx/error/error.log
         container_name: myweb-proxy
-        depends_on:
-            - laravel
-            - mysql
-    laravel:
-        build:
-            context: .
-            dockerfile: Dockerfiles/Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: laravel_app:dev1.0
-        container_name: laravel_app
-        extra_hosts:
-            - 'host.docker.internal:host-gateway'
-        ports:
-            - '${APP_PORT:-8888}:8080'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
-            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-        links:
-            - mysql
-        volumes:
-            - '.:/var/www/html/'
-        networks:
-            sail:
-                ipv4_address: 172.27.0.3
-        depends_on:
-            - mysql
-    mysql:
-        build:
-            context: .
-            dockerfile: docker/mysql/Dockerfile
-        ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
-        environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
-        volumes:
-            - 'mysql:/var/lib/mysql'
-        container_name: mysql_app
-        networks:
-            sail:
-                ipv4_address: 172.27.0.4
-        healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
-            retries: 3
-            timeout: 5s
-    redis:
-        image: redis:alpine
-        command: redis-server --port 6379
-        container_name: redis_boot
-        hostname: redis_boot
-        labels:
-            - "name=redis"
-            - "mode=standalone"
-        ports:
-            - 6379:6379
-        networks:
-            sail:
-                ipv4_address: 172.27.0.6
 networks:
     sail:
         ipam:
@@ -83,6 +22,3 @@ networks:
                 - subnet: 172.27.0.0/16
     out-network:
         driver: bridge
-volumes:
-    mysql:
-        driver: local
