--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "doctrine/dbal": "^3.3",
         "erusev/parsedown-extra": " ~0.8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/redis": "^9.0|^10",
+        "illuminate/support": "^9.0|^10",
         "inspector-apm/inspector-laravel": "^4.7",
         "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
@@ -18,13 +20,12 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.21",
         "mobiledetect/mobiledetectlib": "^2.8",
         "monolog/monolog": "^2.0",
         "predis/predis": "^2.0",
-        "twbs/bootstrap-icons": "^1.10",
-        "illuminate/support": "^9.0|^10",
-        "illuminate/redis": "^9.0|^10",
-        "promphp/prometheus_client_php": "^2.6"
+        "promphp/prometheus_client_php": "^2.6",
+        "twbs/bootstrap-icons": "^1.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
