--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         image: nginx:1.21.5-alpine
         ports:
             - 80:80
+        depends_on:
+            - certbot
         networks:
             sail:
                 ipv4_address: 172.27.0.2
@@ -13,10 +15,9 @@ services:
         volumes:
             - ./Dockerfiles/nginx.conf:/etc/nginx/nginx.conf
             - ./nginx.log:/var/log/nginx/error/error.log
+            - ./certbot/conf:/etc/letsencrypt
         container_name: myweb-proxy
     certbot:
-        depends_on:
-            - nginx
         container_name: certbot
         image: certbot/certbot:latest
         command: certonly --webroot --webroot-path=/var/www/certbot --email paosidu@naver.com --agree-tos  --renew-by-default --no-eff-email -d couhensoft.com
