--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,7 @@
 /vendor
 /prometheus_data/data
 /prometheus/data/
-.env
-.env.testing
-.env.backup
+.env*
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
